@@ -1,3 +1,8 @@
+2009-02-19  Christos Zoulas <christos@zoulas.com>
+
+	* Add a synchronous unmount amq rpc that will wait for the remote
+	  filesystem to be unmounted, or return an error. Enabled by amq -uu
+
 2009-01-11  Erez Zadok  <ezk@fsl.cs.sunysb.edu>
 
 	* amd/ops_udf.c: don't define functions/variables which may not be
